--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "arpad": "^0.1.0",
     "async": "^0.9.0",
     "bluebird": "^2.2.2",
+    "body-parser": "^1.17.2",
     "bookshelf": "^0.7.7",
-    "browsernizr": "^1.0.2",
+    "browsernizr": "^2.2.0",
     "chalk": "^0.5.1",
     "cors": "^2.4.1",
     "debounce": "^1.0.0",
-    "emailjs": "0.3.8",
     "express": "^4.7.2",
     "howler": "^1.1.25",
     "jade": "^1.5.0",
@@ -28,7 +28,7 @@
     "mysql": "^2.2.0",
     "react": "^0.11.1",
     "serve-static": "^1.5.0",
-    "socket.io": "0.9.16",
+    "socket.io": "^2",
     "sparknode": "^0.4.9",
     "through2": "^0.6.1",
     "uglifyify": "^2.5.0",
@@ -56,6 +56,6 @@
     "slug": "^0.5.0",
     "stream-combiner": "^0.2.1",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^1.0.1"
+    "watchify": "^3"
   }
 }
